--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -7,5 +7,11 @@
 # lockfile
 yarn.lock
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # environment variables
 .env
