--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,18 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "author": "nether0ne",
   "license": "MIT",
   "private": true,
-  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc & node .",
-    "dev": "concurrently --kill-others \"tsc -w\" \"nodemon .\""
+    "build": "yarn generate && tsc && tsc-alias",
+    "start": "tsc & node -r module-alias/register .",
+    "dev": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"nodemon .\"",
+    "generate": "prisma generate"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -22,10 +27,20 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.8.2",
+    "tsc-alias": "^1.6.11",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.7.4"
   }
 }
