--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -1,5 +1,6 @@
 # build
 /dist
+.turbo
 
 # dependencies
 /node_modules
@@ -15,3 +16,8 @@ yarn-error.log*
 
 # environment variables
 .env
+.env.local
+.env.dev
+.env.dev.local
+.env.test
+.env.test.local
