--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -25,9 +25,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
-      - run: yarn ci
-      - run: yarn build --if-present
-      - run: yarn test
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm run test
 
   deploy:
     needs: build
