chore: replace yarn lock with npm lock
chore: adjust server scripts to npm

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,15 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn prisma:generate && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "npm run prisma:generate && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node .",
     "dev": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"dotenv -e .env.dev -- nodemon .\"",
     "test": "dotenv -e .env.test -- jest -i",
-    "pretest": "dotenv -e .env.test -- yarn prisma:reset && dotenv -e .env.test -- yarn prisma:push",
-    "prisma:reset": "prisma migrate reset --force",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push",
-    "prisma:migrate": "prisma migrate dev",
+    "pretest": "dotenv -e .env.test -- npm run prisma:reset && dotenv -e .env.test -- npm run prisma:push",
+    "prisma:reset": "npx prisma migrate reset --force",
+    "prisma:generate": "npx prisma generate",
+    "prisma:push": "npx prisma db push",
+    "prisma:migrate": "npx prisma migrate dev",
     "lint:check": "npx eslint src/**/*.ts",
     "lint:fix": "npx eslint --fix src/**/*.ts"
   },
