fix: downgrade turbo package

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
   "pipeline": {
-    "build": {},
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**"]
+    },
     "lint": {},
     "dev": {
       "cache": false
