--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   ],
   "scripts": {
     "build": "turbo run build",
+    "test": "turbo run test",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint"
   },
-  "devDependencies": {
+  "dependencies": {
     "turbo": "^1.1.5"
   },
   "simple-git-hooks": {
