--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -28,6 +28,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   deploy:
     needs: build
