feat: user/todo basic API, setup workflows (#2)
* feat: auth controller with register, login and get user api

* feat: todo models, CRUD api

* fix: linter rules

* fix: build and start scripts

* feat: basic database migration

* feat: setup jest tests for services and api endpoitns

* feat: setup github workflow for CI/CD

* feat: separate server/client deployment workflows

--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,16 @@
 {
   "pipeline": {
-    "build": {},
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**"]
+    },
     "lint": {},
     "dev": {
       "cache": false
+    },
+    "test": {
+      "outputs": ["^build/tests/**"],
+      "dependsOn": []
     }
   }
 }
