--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,31 +1,61 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "author": "nether0ne",
   "license": "MIT",
   "private": true,
-  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc & node .",
-    "dev": "concurrently --kill-others \"tsc -w\" \"nodemon .\""
+    "build": "npm run prisma:generate && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "start": "node .",
+    "dev": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"dotenv -e .env.dev -- nodemon .\"",
+    "test": "dotenv -e .env.test -- jest -i",
+    "pretest": "dotenv -e .env.test -- npm run prisma:reset && dotenv -e .env.test -- npm run prisma:push",
+    "prisma:reset": "npx prisma migrate reset --force",
+    "prisma:generate": "npx prisma generate",
+    "prisma:push": "npx prisma db push",
+    "prisma:migrate": "npx prisma migrate dev",
+    "lint:check": "npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint --fix src/**/*.ts"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "concurrently": "^7.2.2",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.8.2",
+    "tsc-alias": "^1.6.11",
+    "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.7.4"
   }
 }
