--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,16 +1,33 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Server",
   "compilerOptions": {
-    "module": "ES2022",
-    "esModuleInterop": true,
-    "target": "es6",
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
+    "target": "ES6",
+    "types": ["node", "jest"],
+    "lib": ["ES6"],
     "outDir": "dist",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSources": false,
+    "isolatedModules": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
+      "@/*": ["src/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@models/*": ["src/models/*"],
+      "@routes/*": ["src/routes/*"],
+      "@services/*": ["src/services/*"],
+      "@utils/*": ["src/utils/*"],
+      "@myPrisma/*": ["prisma/*"],
+      "@mocks/*": ["tests/mocks/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["./src/**/*", "./tests/**/*"],
+  "exclude": ["node_modules"]
 }
