--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -3,7 +3,6 @@ name: Server CD
 on:
   workflow_run:
     workflows: ["Project CI"]
-    branches: ["main"]
     paths:
       - "apps/server/**"
       - ".github/workflows/server.yml"
@@ -18,4 +17,4 @@ jobs:
       - name: Add server remote origin
         run: git remote add heroku-backend https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_SERVER_APP_NAME }}.git
       - name: Deploy server to Heroku
-        run: git push heroku-server `git subtree split --prefix apps/server master`:refs/heads/master --force
+        run: git push heroku-server `git subtree split --prefix apps/server main`:refs/heads/main --force
