--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -50,6 +50,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Add client remote origin
         run: git remote add heroku-client https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_CLIENT_APP_NAME }}.git
+      - name: Fetch branch
+        run: git fetch main
       - name: Deploy client to Heroku
         run: git push heroku-client `git subtree split --prefix apps/client main`:refs/heads/main --force
       - name: Add server remote origin
