--- a/apps/client/Procfile
+++ b/apps/client/Procfile
@@ -1,3 +1,3 @@
-web: cd apps/client npm i
-web: cd apps/client npm build
-web: cd apps/client npm start
+web: cd apps/client && npm i
+web: cd apps/client && npm build
+web: cd apps/client && npm start
