--- a/apps/client/Procfile
+++ b/apps/client/Procfile
@@ -1,3 +1,3 @@
-web: cd apps/client && npm i
-web: cd apps/client && npm build
-web: cd apps/client && npm start
+web: npm i
+web: npm build
+web: npm start
