--- a/apps/server/Procfile
+++ b/apps/server/Procfile
@@ -1,3 +1,3 @@
-web: cd apps/server && npm i
-web: cd apps/server && npm build
-web: cd apps/server && npm start
+web: npm i
+web: npm build
+web: npm start
