--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -46,6 +46,7 @@ jobs:
   deploy:
     needs: ["build", "test"]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
       - name: Deploy Server
