--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,19 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest -i",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.91",
+    "@mui/material": "^5.9.1",
+    "axios": "^0.27.2",
     "next": "12.2.2",
+    "node-fetch": "^3.2.9",
+    "notistack": "^2.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-aria": "^3.17.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-hook-form-mui": "^5.1.0",
+    "typescript-cookie": "^1.0.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^28.1.6",
     "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/node-fetch": "^2.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "jest": "^28.1.3",
     "typescript": "4.7.4"
   }
 }
