--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -32,11 +32,9 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.6",
-    "@types/node": "18.0.3",
-    "@types/node-fetch": "^2.6.2",
+    "@types/node": "16.*",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "jest": "^28.1.3",
