fix: next middleware status code fix
fix: tsconfig to exclude build files

feat: trying to attach CICD steps to github environments

chore: temporarily remove CD condition

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -46,11 +46,12 @@ jobs:
   deploy:
     needs: ["build", "test"]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
       - name: Deploy Server
         uses: akhileshns/heroku-deploy@v3.12.12
+        environment: nether-todo-server
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_SERVER_APP_NAME }}
@@ -59,6 +60,7 @@ jobs:
           HD_APP_BASE: "apps/server"
       - name: Deploy Client
         uses: akhileshns/heroku-deploy@v3.12.12
+        environment: nether-todo-client
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_CLIENT_APP_NAME }}
