fix: adjust CICD

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -43,15 +43,15 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-  deploy:
+  deploy_client:
     needs: ["build", "test"]
     runs-on: ubuntu-latest
+    environment: nether-todo-client
     # if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
       - name: Deploy Server
         uses: akhileshns/heroku-deploy@v3.12.12
-        environment: nether-todo-server
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_SERVER_APP_NAME }}
@@ -60,7 +60,6 @@ jobs:
           HD_APP_BASE: "apps/server"
       - name: Deploy Client
         uses: akhileshns/heroku-deploy@v3.12.12
-        environment: nether-todo-client
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_CLIENT_APP_NAME }}
