fix: adjust server npm commands
fix: add env example for client

feat: show server test coverage

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,14 +6,18 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "npm run prisma:generate && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "npx prisma generate && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node .",
-    "dev": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\" \"dotenv -e .env.dev -- nodemon .\"",
+    "dev": "concurrently \"npm:dev:*\" --kill-others ",
     "test": "dotenv -e .env.test -- jest -i",
-    "pretest": "dotenv -e .env.test -- npm run prisma:reset && dotenv -e .env.test -- npm run prisma:push",
+    "pretest": "npm run test:prisma:reset && npm run test:prisma:push",
+    "dev:alias:watch": "tsc-alias -p tsconfig.json -w",
+    "dev:watch": "tsc -p tsconfig.json -w",
+    "dev:run": "dotenv -e .env.dev -- nodemon .",
+    "dev:prisma:watch": "dotenv -e .env.dev -- npx prisma generate --watch",
+    "test:prisma:reset": "dotenv -e .env.test -- npm run prisma:reset",
+    "test:prisma:push": "dotenv -e .env.test -- npx prisma db push",
     "prisma:reset": "npx prisma migrate reset --force",
-    "prisma:generate": "npx prisma generate",
-    "prisma:push": "npx prisma db push",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:migrate:dev": "dotenv -e .env.dev npx prisma migrate dev",
     "lint:check": "npx eslint src/**/*.ts",
