--- a/apps/client/.gitignore
+++ b/apps/client/.gitignore
@@ -5,9 +5,6 @@
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
 # next.js
 /.next/
 /out/
@@ -38,3 +35,6 @@ yarn-error.log*
 
 # lockfile
 yarn.lock
+
+# env
+.env
