--- a/apps/server/.env.dev.example
+++ b/apps/server/.env.dev.example
@@ -7,5 +7,8 @@ JWT_SECRET="dev"
 # application port
 PORT=5000
 
-# database connection
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
+# database connection for node environment
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/todo"
+
+# database connection for docker
+# DATABASE_URL="postgres://postgres:postgres@postgres:5432/todo"
