--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Continuous Integration Workflow
+name: Continuous Integration / Continuous Deployment Workflow
 
 on:
   push:
@@ -46,6 +46,7 @@ jobs:
   deploy:
     needs: ["build", "test"]
     runs-on: ubuntu-latest
+    environment: deployment
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
